# cattgram

./: .gitignore  Cargo.toml  README.md  wrangler.toml
src/: lib.rs
src/handlers/: embed.rs  home.rs  media.rs  mod.rs  oembed.rs
src/scraper/: cache.rs  embed_page.rs  graphql.rs  mod.rs  papi.rs  proxy.rs  types.rs
src/templates/: embed_html.rs  home_html.rs  mod.rs
src/utils/: bot_detect.rs  escape.rs  instagram.rs  mod.rs
