[package]
name = "cattgram"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["http"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
